--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -240,6 +240,23 @@
 			<version>1.0.4</version>
 		</dependency>
 		
+		<!-- Spring Security dependencies -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
 		<!-- Opencloud dependencies - for cloud of tags -->
 		<dependency>
 		    <groupId>org.mcavallo</groupId>
