--- a/ChrisBlog/src/main/webapp/WEB-INF/web.xml
+++ b/ChrisBlog/src/main/webapp/WEB-INF/web.xml
@@ -10,19 +10,39 @@
   
   
   <servlet>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>spring-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:conf/spring-conf.xml</param-value>
-		</init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>    
     
     <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
+        <servlet-name>spring-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    
+    <listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/spring-dispatcher-servlet.xml,
+			/WEB-INF/spring-security.xml
+		</param-value>
+	</context-param>
+    
+    
+    <!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	
 	<error-page>
