--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -256,6 +256,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring.version}</version>
+		</dependency>		
 		
 		<!-- Opencloud dependencies - for cloud of tags -->
 		<dependency>
