--- a/ChrisBlog/src/main/webapp/WEB-INF/web.xml
+++ b/ChrisBlog/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,13 @@
   <servlet>
         <servlet-name>spring-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>
+				classpath:conf/spring-dispatcher-conf.xml,
+				classpath:conf/spring-security-conf.xml
+			</param-value>
+		</init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>    
     
@@ -27,8 +34,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/spring-dispatcher-servlet.xml,
-			/WEB-INF/spring-security.xml
+			classpath:conf/spring-dispatcher-conf.xml,
+			classpath:conf/spring-security-conf.xml
 		</param-value>
 	</context-param>
     
