--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -294,7 +294,6 @@
 		   <groupId>mysql</groupId>
 		   <artifactId>mysql-connector-java</artifactId>
 		   <version>5.1.18</version>
-		   <scope>runtime</scope>
 		</dependency>		
 						
 	</dependencies>
@@ -328,6 +327,12 @@
 				<db.driver>com.mysql.jdbc.Driver</db.driver>
 				<db.username>root</db.username>
 				<db.password>P@ssw0rd</db.password>
+				
+				<!-- Test data base -->
+				<test.db.url>jdbc:mysql://localhost:3306/chrisblog_db_test</test.db.url>
+				<test.db.driver>com.mysql.jdbc.Driver</test.db.driver>
+				<test.db.username>root</test.db.username>
+				<test.db.password>P@ssw0rd</test.db.password>
 			</properties>				
 		</profile>
 				
@@ -387,7 +392,7 @@
 			            <configuration>			            	
 			                <skip>true</skip>
 			            </configuration>
-			        </plugin>
+			        </plugin>			       
 			        <!-- Deploy application -->
 					<plugin>
 				        <groupId>org.apache.tomcat.maven</groupId>
@@ -409,7 +414,49 @@
                             <update>true</update>
 				        </configuration>
 				      </plugin>
-			        
+			           <!-- Fill db with data -->
+				        <plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>sql-maven-plugin</artifactId>
+							<version>1.5</version>
+							<configuration>
+								<delimiter>GO</delimiter>							
+								<skip>false</skip>
+								<autocommit>true</autocommit>
+								<orderFile>ascending</orderFile>
+							</configuration>
+							<executions>						
+								<execution>
+									<id>setup-db-deploy</id>
+									<phase>post-integration-test</phase>
+									<goals>
+										<goal>execute</goal>
+									</goals>
+									<configuration>
+										<driver>${db.driver}</driver>
+										<url>${db.url}</url>
+										<username>${db.username}</username>
+										<password>${db.password}</password>
+										<fileset>
+											<basedir>${basedir}/db/</basedir>
+											<includes>
+												<!-- Important is alphabetical order of files - "sets" with 
+												insert data after "releases" with data tables structure  -->
+												<include>releases/**/*.sql</include>
+												<include>sets/**/*.sql</include>
+											</includes>
+										</fileset>																
+									</configuration>
+								</execution>
+							</executions>
+							<dependencies>
+								<dependency>
+								   <groupId>mysql</groupId>
+								   <artifactId>mysql-connector-java</artifactId>
+								   <version>5.1.18</version>
+								</dependency>
+							</dependencies>							
+						</plugin>
 				</plugins>
 			</build>			
 		</profile>
@@ -422,6 +469,49 @@
 	        </activation>			
 			<build>
 				<plugins>
+					<!-- Fill db with data -->
+			        <plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sql-maven-plugin</artifactId>
+						<version>1.5</version>
+						<configuration>
+							<delimiter>GO</delimiter>							
+							<skip>false</skip>
+							<autocommit>true</autocommit>
+							<orderFile>ascending</orderFile>
+						</configuration>
+						<executions>						
+							<execution>
+								<id>setup-db-unit</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<driver>${test.db.driver}</driver>
+									<url>${test.db.url}</url>
+									<username>${test.db.username}</username>
+									<password>${test.db.password}</password>
+									<fileset>
+										<basedir>${basedir}/db/</basedir>
+										<includes>
+											<!-- Important is alphabetical order of files - "sets" with 
+											insert data after "releases" with data tables structure  -->
+											<include>releases/**/*.sql</include>
+										</includes>
+									</fileset>																
+								</configuration>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+							   <groupId>mysql</groupId>
+							   <artifactId>mysql-connector-java</artifactId>
+							   <version>5.1.18</version>
+							</dependency>
+						</dependencies>							
+					</plugin>
+					<!-- Unit tests -->
 					<plugin>
 			            <groupId>org.apache.maven.plugins</groupId>
 			            <artifactId>maven-surefire-plugin</artifactId>
@@ -456,6 +546,50 @@
 			<id>intg</id>			
 			<build>
 				<plugins>
+					<!-- Fill db with data -->
+				        <plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>sql-maven-plugin</artifactId>
+							<version>1.5</version>
+							<configuration>
+								<delimiter>GO</delimiter>							
+								<skip>false</skip>
+								<autocommit>true</autocommit>
+								<orderFile>ascending</orderFile>
+							</configuration>
+							<executions>						
+								<execution>
+									<id>setup-db-deploy</id>
+									<phase>post-integration-test</phase>
+									<goals>
+										<goal>execute</goal>
+									</goals>
+									<configuration>
+										<driver>${db.driver}</driver>
+										<url>${db.url}</url>
+										<username>${db.username}</username>
+										<password>${db.password}</password>
+										<fileset>
+											<basedir>${basedir}/db/</basedir>
+											<includes>
+												<!-- Important is alphabetical order of files - "sets" with 
+												insert data after "releases" with data tables structure  -->
+												<include>releases/**/*.sql</include>
+												<include>sets/**/*.sql</include>
+											</includes>
+										</fileset>																
+									</configuration>
+								</execution>
+							</executions>
+							<dependencies>
+								<dependency>
+								   <groupId>mysql</groupId>
+								   <artifactId>mysql-connector-java</artifactId>
+								   <version>5.1.18</version>
+								</dependency>
+							</dependencies>							
+						</plugin>
+						<!-- Integration tests -->
 					<plugin>
 			            <groupId>org.apache.maven.plugins</groupId>
 			            <artifactId>maven-surefire-plugin</artifactId>
