Implementing loging mechanism: add rem database

--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -356,6 +356,18 @@
 				
 				<!-- Sonar data -->
 				<sonar.host.url>http://chris-blog.org/sonar/</sonar.host.url>
+				
+				<!-- Data base -->
+				<db.url>jdbc:mysql://localhost:3306/chrisb_blog_jenkins</db.url>
+				<db.driver>com.mysql.jdbc.Driver</db.driver>
+				<db.username>chrisb_admin</db.username>
+				<db.password>P@ssw0rd</db.password>
+				
+				<!-- Test data base -->
+				<test.db.url>jdbc:mysql://localhost:3306/chrisb_blog_jenkins_test</test.db.url>
+				<test.db.driver>com.mysql.jdbc.Driver</test.db.driver>
+				<test.db.username>chrisb_admin</test.db.username>
+				<test.db.password>P@ssw0rd</test.db.password>
 			</properties>		
 		</profile>
 		
