--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -80,7 +80,6 @@
 			<groupId>org.dbunit</groupId>
 			<artifactId>dbunit</artifactId>
 			<version>2.4.8</version>
-			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>junit</groupId>
@@ -281,7 +280,6 @@
 		   <groupId>org.hibernate</groupId>
 		   <artifactId>hibernate-entitymanager</artifactId>
 		   <version>3.6.9.Final</version>
-		   <scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -620,6 +618,10 @@
 			                	<systemPropertyVariables>
 						            <path.host>${path.host}</path.host>
 						            <path.context>${path.context}</path.context>
+						            <db.url>${db.url}</db.url>
+						            <db.driver>${db.driver}</db.driver>
+						            <db.username>${db.username}</db.username>
+						            <db.password>${db.password}</db.password>
 						          </systemPropertyVariables>			                	
             					<includes>
             						<include>**/*Intg.java</include>
