Implementing loging mechanism: adding missing tests

--- a/ChrisBlog/pom.xml
+++ b/ChrisBlog/pom.xml
@@ -498,7 +498,7 @@
 						<executions>						
 							<execution>
 								<id>setup-db-unit</id>
-								<phase>pre-integration-test</phase>
+								<phase>test</phase>
 								<goals>
 									<goal>execute</goal>
 								</goals>
