--- a/ChrisBlog/src/main/resources/project.properties
+++ b/ChrisBlog/src/main/resources/project.properties
@@ -5,3 +5,6 @@ path.context=${path.context}
 #Folders
 folder.examples=${folder.examples}
 folder.sources=${folder.sources}
+
+#Count of articles displayed on single page
+count.articles.per.page=${count.articles.per.page}
